--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,13 +28,9 @@
                 </div>
                 <div class="col-12 col-sm-4 text-end">
                   <div class="input-group">
-                    <span class="input-group-text bg-transparent" id="basic-addon1">
-                      <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M16.125 14.565L13.7475 12.315C13.2955 12.897 12.7537 13.4033 12.1425 13.815L14.5875 16.14C14.6903 16.2601 14.8174 16.357 14.9604 16.4243C15.1035 16.4916 15.2591 16.5278 15.4172 16.5305C15.5753 16.5332 15.7321 16.5024 15.8773 16.44C16.0226 16.3776 16.1529 16.2851 16.2598 16.1687C16.3667 16.0522 16.4476 15.9144 16.4973 15.7643C16.5469 15.6142 16.5642 15.4553 16.5479 15.2981C16.5316 15.1408 16.4822 14.9888 16.4028 14.8521C16.3234 14.7154 16.216 14.5971 16.0875 14.505L16.125 14.565Z" fill="#D9D9D9" />
-                        <path d="M8.355 1.5C7.01998 1.5 5.71493 1.89588 4.6049 2.63758C3.49487 3.37928 2.6297 4.43349 2.11881 5.66689C1.60792 6.90029 1.47425 8.25749 1.7347 9.56686C1.99515 10.8762 2.63802 12.079 3.58203 13.023C4.52603 13.967 5.72877 14.6099 7.03814 14.8703C8.34751 15.1308 9.70471 14.9971 10.9381 14.4862C12.1715 13.9753 13.2257 13.1101 13.9674 12.0001C14.7091 10.8901 15.105 9.58502 15.105 8.25C15.105 6.45979 14.3938 4.7429 13.128 3.47703C11.8621 2.21116 10.1452 1.5 8.355 1.5ZM8.355 13.02C7.41339 13.02 6.4929 12.7409 5.70988 12.2179C4.92685 11.6949 4.31643 10.9516 3.95574 10.0818C3.59506 9.21196 3.50031 8.25477 3.68347 7.33114C3.86662 6.40751 4.31946 5.5589 4.98476 4.89255C5.65006 4.22621 6.49795 3.77203 7.42129 3.58743C8.34463 3.40282 9.30198 3.49606 10.1723 3.85537C11.0427 4.21469 11.787 4.82394 12.3112 5.60614C12.8354 6.38835 13.116 7.30839 13.1175 8.25C13.1195 8.87633 12.9977 9.49688 12.7591 10.076C12.5206 10.6551 12.17 11.1814 11.7275 11.6247C11.2849 12.0679 10.7592 12.4193 10.1804 12.6588C9.60169 12.8982 8.98133 13.021 8.355 13.02Z" fill="#D9D9D9" />
-                      </svg>
-                    </span>
-                    <input type="text" class="form-control border-start-0" placeholder="Tìm kiếm" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="month" class="form-control" id="overviewMonthFilter" 
+                          value="{{ selected_month_year }}" 
+                          onchange="filterOverviewByMonth(this.value)">
                   </div>
                 </div>
               </div>
@@ -42,7 +38,7 @@
                 <div class="col-6" role="presentation">
                   <div class="overview-item active" data-bs-toggle="pill" data-bs-target="#pills-overview-expense" type="button" role="tab" aria-controls="pills-overview-expense" aria-selected="true">
                     <div class="heading">Chi tiêu <span>
-                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="25" height="25" viewBox="0 0 25 25" fill="currentColor" xmlns="http://www.w3.org/2000/svg" class="overview-expense-img">
                           <path d="M3.89239 15.4921C4.12978 15.3742 4.40426 15.3554 4.65552 15.4398C4.90679 15.5241 5.11427 15.7048 5.23239 15.9421C5.86532 17.2203 6.82848 18.3061 8.02211 19.0869C9.21573 19.8677 10.5964 20.3152 12.0211 20.383C13.4458 20.4509 14.8628 20.1366 16.1252 19.4727C17.3876 18.8088 18.4496 17.8195 19.2011 16.6072C19.9526 15.3949 20.3663 14.0037 20.3994 12.5778C20.4325 11.1518 20.0838 9.74297 19.3894 8.49711C18.6949 7.25124 17.68 6.2137 16.4498 5.49194C15.2196 4.77018 13.8187 4.39046 12.3924 4.3921C10.9013 4.38564 9.43854 4.79973 8.17208 5.58685C6.90562 6.37397 5.88674 7.50221 5.23239 8.8421C5.11304 9.08079 4.90376 9.2623 4.65059 9.34669C4.39741 9.43108 4.12108 9.41144 3.88239 9.2921C3.64369 9.17275 3.46219 8.96347 3.37779 8.71029C3.2934 8.45712 3.31304 8.18079 3.43239 7.9421C4.43578 5.92284 6.09215 4.30196 8.13267 3.34253C10.1732 2.3831 12.4781 2.14144 14.6732 2.65677C16.8683 3.17211 18.8249 4.41419 20.2253 6.18142C21.6257 7.94865 22.3877 10.1373 22.3877 12.3921C22.3877 14.6469 21.6257 16.8356 20.2253 18.6028C18.8249 20.37 16.8683 21.6121 14.6732 22.1274C12.478 22.6428 10.1732 22.4011 8.13266 21.4417C6.09215 20.4822 4.43578 18.8614 3.43239 16.8421C3.3728 16.7235 3.33742 16.5942 3.32833 16.4617C3.31923 16.3293 3.3366 16.1963 3.37942 16.0707C3.42223 15.945 3.48965 15.8291 3.57772 15.7298C3.66579 15.6305 3.77276 15.5497 3.89239 15.4921ZM3.39239 11.3921L12.9824 11.3921L10.6824 9.1021C10.5892 9.00886 10.5152 8.89817 10.4647 8.77635C10.4143 8.65453 10.3883 8.52396 10.3883 8.3921C10.3883 8.26024 10.4143 8.12967 10.4647 8.00785C10.5152 7.88603 10.5892 7.77534 10.6824 7.6821C10.7756 7.58886 10.8863 7.5149 11.0081 7.46444C11.13 7.41398 11.2605 7.38801 11.3924 7.38801C11.5242 7.38801 11.6548 7.41398 11.7766 7.46444C11.8985 7.5149 12.0092 7.58886 12.1024 7.6821L16.1024 11.6821C16.1934 11.7772 16.2648 11.8893 16.3124 12.0121C16.4124 12.2556 16.4124 12.5286 16.3124 12.7721C16.2648 12.8948 16.1934 13.007 16.1024 13.1021L12.1024 17.1021C12.0094 17.1958 11.8988 17.2702 11.777 17.321C11.6551 17.3718 11.5244 17.3979 11.3924 17.3979C11.2604 17.3979 11.1297 17.3718 11.0078 17.321C10.886 17.2702 10.7754 17.1958 10.6824 17.1021C10.5887 17.0091 10.5143 16.8985 10.4635 16.7767C10.4127 16.6548 10.3866 16.5241 10.3866 16.3921C10.3866 16.2601 10.4127 16.1294 10.4635 16.0075C10.5143 15.8857 10.5887 15.7751 10.6824 15.6821L12.9824 13.3921L3.39239 13.3921C3.12717 13.3921 2.87282 13.2867 2.68528 13.0992C2.49774 12.9117 2.39239 12.6573 2.39239 12.3921C2.39239 12.1269 2.49774 11.8725 2.68528 11.685C2.87282 11.4975 3.12717 11.3921 3.39239 11.3921Z" fill="#FF819F" />
                         </svg>
                       </span>
@@ -53,7 +49,7 @@
                 <div class="col-6" role="presentation">
                   <div class="overview-item" data-bs-toggle="pill" data-bs-target="#pills-overview-income" type="button" role="tab" aria-controls="pills-overview-income" aria-selected="false">
                     <div class="heading">Thu nhập <span>
-                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="25" height="25" viewBox="0 0 25 25" fill="currentColor" xmlns="http://www.w3.org/2000/svg" class="overview-income-img">
                           <path d="M3.89239 15.4921C4.12978 15.3742 4.40426 15.3554 4.65552 15.4398C4.90679 15.5241 5.11427 15.7048 5.23239 15.9421C5.86532 17.2203 6.82848 18.3061 8.02211 19.0869C9.21573 19.8677 10.5964 20.3152 12.0211 20.383C13.4458 20.4509 14.8628 20.1366 16.1252 19.4727C17.3876 18.8088 18.4496 17.8195 19.2011 16.6072C19.9526 15.3949 20.3663 14.0037 20.3994 12.5778C20.4325 11.1518 20.0838 9.74297 19.3894 8.49711C18.6949 7.25124 17.68 6.2137 16.4498 5.49194C15.2196 4.77018 13.8187 4.39046 12.3924 4.3921C10.9013 4.38564 9.43854 4.79973 8.17208 5.58685C6.90562 6.37397 5.88674 7.50221 5.23239 8.8421C5.11304 9.08079 4.90376 9.2623 4.65059 9.34669C4.39741 9.43108 4.12108 9.41144 3.88239 9.2921C3.64369 9.17275 3.46219 8.96347 3.37779 8.71029C3.2934 8.45712 3.31304 8.18079 3.43239 7.9421C4.43578 5.92284 6.09215 4.30196 8.13267 3.34253C10.1732 2.3831 12.4781 2.14144 14.6732 2.65677C16.8683 3.17211 18.8249 4.41419 20.2253 6.18142C21.6257 7.94865 22.3877 10.1373 22.3877 12.3921C22.3877 14.6469 21.6257 16.8356 20.2253 18.6028C18.8249 20.37 16.8683 21.6121 14.6732 22.1274C12.478 22.6428 10.1732 22.4011 8.13266 21.4417C6.09215 20.4822 4.43578 18.8614 3.43239 16.8421C3.3728 16.7235 3.33742 16.5942 3.32833 16.4617C3.31923 16.3293 3.3366 16.1963 3.37942 16.0707C3.42223 15.945 3.48965 15.8291 3.57772 15.7298C3.66579 15.6305 3.77276 15.5497 3.89239 15.4921ZM3.39239 11.3921L12.9824 11.3921L10.6824 9.1021C10.5892 9.00886 10.5152 8.89817 10.4647 8.77635C10.4143 8.65453 10.3883 8.52396 10.3883 8.3921C10.3883 8.26024 10.4143 8.12967 10.4647 8.00785C10.5152 7.88603 10.5892 7.77534 10.6824 7.6821C10.7756 7.58886 10.8863 7.5149 11.0081 7.46444C11.13 7.41398 11.2605 7.38801 11.3924 7.38801C11.5242 7.38801 11.6548 7.41398 11.7766 7.46444C11.8985 7.5149 12.0092 7.58886 12.1024 7.6821L16.1024 11.6821C16.1934 11.7772 16.2648 11.8893 16.3124 12.0121C16.4124 12.2556 16.4124 12.5286 16.3124 12.7721C16.2648 12.8948 16.1934 13.007 16.1024 13.1021L12.1024 17.1021C12.0094 17.1958 11.8988 17.2702 11.777 17.321C11.6551 17.3718 11.5244 17.3979 11.3924 17.3979C11.2604 17.3979 11.1297 17.3718 11.0078 17.321C10.886 17.2702 10.7754 17.1958 10.6824 17.1021C10.5887 17.0091 10.5143 16.8985 10.4635 16.7767C10.4127 16.6548 10.3866 16.5241 10.3866 16.3921C10.3866 16.2601 10.4127 16.1294 10.4635 16.0075C10.5143 15.8857 10.5887 15.7751 10.6824 15.6821L12.9824 13.3921L3.39239 13.3921C3.12717 13.3921 2.87282 13.2867 2.68528 13.0992C2.49774 12.9117 2.39239 12.6573 2.39239 12.3921C2.39239 12.1269 2.49774 11.8725 2.68528 11.685C2.87282 11.4975 3.12717 11.3921 3.39239 11.3921Z" fill="#FF819F" />
                         </svg>
                       </span>
@@ -66,9 +62,17 @@
                 <div class="tab-pane fade show active" id="pills-overview-expense" role="tabpanel" aria-labelledby="pills-overview-expense-tab">
                   <div class="row mt-5">
                     <div class="col-12">
-                      <div id="expenseChart" class="d-flex justify-content-center"></div>
+                      {% if not expense_stats %}
+                        <div class="d-flex flex-column justify-content-center text-center">
+                          <img src="{{ url_for('static', filename='images/pie-chart-empty.svg') }}" alt="pie-chart-empty" width="300" class="m-auto">
+                          <span class="text-secondary fs-5">Không có dữ liệu</span>
+                        </div>
+                      {% else %}
+                        <div id="expenseChart" class="d-flex justify-content-center"></div>
+                      {% endif %}
                     </div>
                   </div>
+                  {% if expense_stats %}
                   <div class="mt-4">
                     <div class="row">
                       <div class="col-10 section-heading">Giao Dịch</div>
@@ -95,13 +99,22 @@
                         </div>
                       </div> {% endfor %} </div>
                   </div>
+                  {% endif %}
                 </div>
                 <div class="tab-pane fade" id="pills-overview-income" role="tabpanel" aria-labelledby="pills-overview-income-tab">
                   <div class="row mt-5">
                     <div class="col-12">
-                      <div id="incomeChart" class="d-flex justify-content-center"></div>
+                      {% if not income_stats %}
+                        <div class="d-flex flex-column justify-content-center text-center">
+                          <img src="{{ url_for('static', filename='images/pie-chart-empty.svg') }}" alt="pie-chart-empty" width="300" class="m-auto">
+                          <span class="text-secondary fs-5">Không có dữ liệu</span>
+                        </div>
+                      {% else %}
+                        <div id="incomeChart" class="d-flex justify-content-center"></div>
+                      {% endif %}
                     </div>
                   </div>
+                  {% if income_stats %}
                   <div class="mt-4">
                     <div class="section-heading">Danh Mục</div>
                     <div class="category-summary"> {% for category, amount, type, id in income_stats %} <div class="row category-row align-items-center mt-4">
@@ -121,6 +134,7 @@
                         </div>
                       </div> {% endfor %} </div>
                   </div>
+                  {% endif %}
                 </div>
               </div>
             </div>
@@ -128,6 +142,15 @@
           <div class="col-12 col-md-5">
             <div class="financial-trend">
               <div class="section-heading">Xu Hướng Chi Tiêu</div>
+              <div class="col-12 col-md-6 m-auto mt-3 mb-2">
+                <select id="yearFilter" class="form-select" onchange="filterYear(this.value)">
+                  {% for year in range(2020, 2031) %}
+                    <option value="{{ year }}" {% if selected_year == year %}selected{% endif %}>
+                      {{ year }}
+                    </option>
+                  {% endfor %}
+                </select>
+            </div>
               <div id="financialTrendChart"></div>
             </div>
             <div class="fund-source">
@@ -282,6 +305,20 @@
 {% block scripts %}
 <script>
 
+  function filterOverviewByMonth(month) {
+    if (month) {
+      const url = new URL(window.location.href);
+      url.searchParams.set('month', month);
+      window.location.href = url.toString();
+    } else {
+      alert("Vui lòng chọn tháng hợp lệ!");
+    }
+  }
+  function filterYear(year) {
+    const url = new URL(window.location.href);
+    url.searchParams.set('year', year);
+    window.location.href = url.toString();
+  }
   function numberWithCommas(x) {
     return x.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",");
   }
