--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -156,9 +156,9 @@
                   <input type="date" class="form-control" id="spendDate" name="date" required>
                 </div>
                 <div class="mb-3">
-                  <label class="form-label">Nguồn tiền</label>
+                  <label class="form-label">Nguồn thu</label>
                   <select class="form-select" name="source" required>
-                    <option selected disabled value="">Chọn nguồn tiền</option> {% for id, type in sources_types %} <option value="{{ id }}">{{ type }}</option> {% endfor %}
+                    <option selected disabled value="">Chọn nguồn thu</option> {% for id, type in sources_types %} <option value="{{ id }}">{{ type }}</option> {% endfor %}
                   </select>
                 </div>
                 <div class="mb-3">
