--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,7 +10,7 @@
                     </div>
                 </div>
                 <div class="row mt-4">
-                    <div class="col-12 col-sm-6">
+                    <div class="col-12 col-md-6">
                         <div class="contact-item mb-5">
                             <div class="d-inline-flex text-white align-items-center">
                                 <div class="me-3 contact-icon">
@@ -36,7 +36,7 @@
                             </div>
                         </div>
                    </div>
-                   <div class="col-12 col-sm-6">
+                   <div class="col-12 col-md-6">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.189270650575!2d106.7004610758689!3d10.796811258815717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528b6f92c65a5%3A0xcc54e9936bbdb6c5!2zMTIzIMSQaeG7h24gQmnDqm4gUGjhu6csIFBoxrDhu51uZyAxNSwgQsOsbmggVGjhuqFuaCwgSOG7kyBDaMOtIE1pbmggNzAwMDAwLCBWaWV0bmFt!5e0!3m2!1sen!2s!4v1736412015852!5m2!1sen!2s" class="w-100" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 </div>
