--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,7 +20,7 @@
       </div>
       <div class="container bg-light app-content mt-3">
         <div class="row">
-          <div class="col-12 col-md-7">
+          <div class="col-12 col-lg-7">
             <div class="overview">
               <div class="row">
                 <div class="col-12 col-sm-8">
@@ -139,7 +139,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-5">
+          <div class="col-12 col-lg-5">
             <div class="financial-trend">
               <div class="section-heading">Xu Hướng Chi Tiêu</div>
               <div class="col-12 col-md-6 m-auto mt-3 mb-2">
@@ -153,7 +153,7 @@
             </div>
               <div id="financialTrendChart"></div>
             </div>
-            <div class="fund-source">
+            <div class="fund-source mt-3">
               <div class="row">
                   <div class="col-10 section-heading">Nguồn Thu</div>
                   <div class="col-2 text-end">
