--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,7 +66,7 @@
                      href="{{ url_for('contact_bp.contact') }}">Liên Hệ</a>
               </li>
           </ul>
-                  <div class="dropdown">
+                  <div class="dropdown user-dropdown">
                       <div type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                           <img src="{{ url_for('static', filename='images/profile.png') }}" alt="profile-img" class="rounded-circle">
                       </div>
